nav-bar created

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>GIT</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li>hello</li>
+                <li>world</li>
+                <li>commits</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
