--- a/index.html
+++ b/index.html
@@ -16,5 +16,12 @@
             </ul>
         </nav>
     </header>
+    <section>
+        <article>
+            <h2>HELLO</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum libero non eaque eligendi reprehenderit officia, excepturi sed. Non deleniti omnis maiores officiis, in esse? Veniam, cum? Dolorum consectetur sunt nesciunt.
+            </p>
+        </article>
+    </section>
 </body>
 </html>
