--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
             </p>
         </article>
     </section>
+    <footer>
+        <p>contact us</p>
+        <p>we are here</p>
+    </footer>
 </body>
 </html>
